--- a/projects/authentication/src/lib/components/login-form/login-form.component.scss
+++ b/projects/authentication/src/lib/components/login-form/login-form.component.scss
@@ -1,10 +1,7 @@
 @import '../../../../../../src/assets/styles/auth/authentication.style.scss';
-// .example-form {
-//     min-width: 150px;
-//     max-width: 500px;
-//     width: 100%;
+// ::ng-deep .mat-checkbox-background {
+//     // background-color: green;
 // }
-
-// .example-full-width {
-//     width: 100%;
+// .alternate {
+//   @include mat-button-theme($alternate-theme);
 // }
