--- a/projects/authentication/src/lib/components/register-form/register-form.component.html
+++ b/projects/authentication/src/lib/components/register-form/register-form.component.html
@@ -1,37 +1,41 @@
 <form class="register-form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-        <label for="name"
-            ><i
-                class="zmdi zmdi-account material-icons-name"
-                [style.color]="
-                    !registerForm.get('name').valid && registerForm.get('name').touched
-                        ? '#cc3b49'
-                        : 'black'
-                "
-            ></i
-        ></label>
-
         <mat-form-field appearance="fill">
-            <mat-label>Name</mat-label>
+            <mat-label>
+                <span class="span-pos">
+                    <i
+                        class="zmdi zmdi-account material-icons-name"
+                        [style.color]="
+                            !registerForm.get('name').valid && registerForm.get('name').touched
+                                ? '#cc3b49'
+                                : 'black'
+                        "
+                    ></i
+                ></span>
+                {{ 'AUTH.REGISTER.NAME' | translate }}</mat-label
+            >
             <input matInput placeholder="Ex. Mohammed" formControlName="name" />
             <mat-error *ngIf="registerForm.get('name').hasError('required')">
-                Name is <strong>required</strong>
+                {{ 'AUTH.REGISTER.NAME_IS' | translate }}
+                <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
             </mat-error>
         </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="email"
-            ><i
-                class="zmdi zmdi-email"
-                [style.color]="
-                    !registerForm.get('email').valid && registerForm.get('email').touched
-                        ? '#cc3b49'
-                        : 'black'
-                "
-            ></i
-        ></label>
         <mat-form-field appearance="fill">
-            <mat-label>Email</mat-label>
+            <mat-label>
+                <span class="span-pos"
+                    ><i
+                        class="zmdi zmdi-email"
+                        [style.color]="
+                            !registerForm.get('email').valid && registerForm.get('email').touched
+                                ? '#cc3b49'
+                                : 'black'
+                        "
+                    ></i
+                ></span>
+                {{ 'AUTH.REGISTER.EMAIL' | translate }}</mat-label
+            >
             <input matInput formControlName="email" placeholder="Ex. pat@example.com" />
             <mat-error
                 *ngIf="
@@ -39,93 +43,100 @@
                     !registerForm.get('email').hasError('required')
                 "
             >
-                Please enter a valid email address
+                {{ 'AUTH.REGISTER.VALID_EMAIL' | translate }}
             </mat-error>
             <mat-error *ngIf="registerForm.get('email').hasError('required')">
-                Email is <strong>required</strong>
+                {{ 'AUTH.REGISTER.EMAIL_IS' | translate }}
+                <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
             </mat-error>
         </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="password"
-            ><i
-                class="zmdi zmdi-lock"
-                [style.color]="
-                    !registerForm.get('password').valid && registerForm.get('password').touched
-                        ? '#cc3b49'
-                        : 'black'
-                "
-            ></i
-        ></label>
         <mat-form-field appearance="fill">
-            <mat-label>Enter your password</mat-label>
+            <mat-label
+                ><span class="span-pos">
+                    <i
+                        class="zmdi zmdi-lock"
+                        [style.color]="
+                            !registerForm.get('password').valid &&
+                            registerForm.get('password').touched
+                                ? '#cc3b49'
+                                : 'black'
+                        "
+                    ></i>
+                </span>
+                {{ 'AUTH.REGISTER.PASS' | translate }}</mat-label
+            >
 
             <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" />
-            <button
-                mat-icon-button
+            <mat-icon
                 matSuffix
                 (click)="hide = !hide"
                 [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide"
             >
                 <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-            </button>
+            </mat-icon>
             <mat-error *ngIf="registerForm.get('password').hasError('required')">
-                Password is <strong>required</strong>
+                {{ 'AUTH.REGISTER.PASS_IS' | translate }}
+                <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
             </mat-error>
         </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="re-password"
-            ><i
-                class="zmdi zmdi-lock-outline"
-                [style.color]="
-                    !registerForm.get('confirmPassword').valid &&
-                    registerForm.get('confirmPassword').touched
-                        ? '#cc3b49'
-                        : 'black'
-                "
-            ></i
-        ></label>
         <mat-form-field appearance="fill">
-            <mat-label>Enter your password</mat-label>
+            <mat-label>
+                <span class="span-pos">
+                    <i
+                        class="zmdi zmdi-lock-outline"
+                        [style.color]="
+                            !registerForm.get('confirmPassword').valid &&
+                            registerForm.get('confirmPassword').touched
+                                ? '#cc3b49'
+                                : 'black'
+                        "
+                    ></i> </span
+                >{{ 'AUTH.REGISTER.PASS' | translate }}</mat-label
+            >
 
             <input
                 matInput
                 [type]="hidee ? 'password' : 'text'"
                 formControlName="confirmPassword"
             />
-            <button
-                mat-icon-button
+            <mat-icon
                 matSuffix
-                (click)="hidee = !hidee"
+                (click)="hide = !hide"
                 [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide"
             >
-                <mat-icon>{{ hidee ? 'visibility_off' : 'visibility' }}</mat-icon>
-            </button>
+                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </mat-icon>
             <mat-error *ngIf="registerForm.get('confirmPassword').hasError('required')">
-                Password is <strong>required</strong>
+                {{ 'AUTH.REGISTER.PASS_IS' | translate }}
+                <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
             </mat-error>
         </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="handle"
-            ><i
-                class="zmdi zmdi-bookmark"
-                [style.color]="
-                    !registerForm.get('handle').valid && registerForm.get('handle').touched
-                        ? '#cc3b49'
-                        : 'black'
-                "
-            ></i
-        ></label>
-
         <mat-form-field appearance="fill">
-            <mat-label>Handle</mat-label>
+            <mat-label
+                ><span class="span-pos">
+                    <i
+                        class="zmdi zmdi-bookmark"
+                        [style.color]="
+                            !registerForm.get('handle').valid && registerForm.get('handle').touched
+                                ? '#cc3b49'
+                                : 'black'
+                        "
+                    ></i>
+                </span>
+                {{ 'AUTH.REGISTER.HANDLE' | translate }}</mat-label
+            >
             <input matInput formControlName="handle" />
             <mat-error *ngIf="registerForm.get('handle').hasError('required')">
-                Handle is <strong>required</strong>
+                {{ 'AUTH.REGISTER.HANDLE_IS' | translate }}
+                <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
             </mat-error>
         </mat-form-field>
     </div>
@@ -138,10 +149,7 @@
         >
     </div>
 
-    <div *ngIf="error" class="AnForm-error">
-        <i class="zmdi zmdi-alert-triangle" style="color: #cc3b49;"></i>
-        {{ error }}
-    </div>
+    <lib-error-auth></lib-error-auth>
     <div class="form-group form-button">
         <button mat-raised-button color="primary" [disabled]="!registerForm.valid">
             {{ 'AUTH.REGISTER.REGISTER' | translate }}
