refactor: refactoring code

--- a/projects/authentication/src/lib/containers/login/login-container.component.html
+++ b/projects/authentication/src/lib/containers/login/login-container.component.html
@@ -18,6 +18,8 @@
                             {{ 'AUTH.LOGIN.SIGN' | translate }}
                         </h2>
 
+                        <lib-error-auth></lib-error-auth>
+
                         <lib-login-form *ngIf="!isLoading"></lib-login-form>
 
                         <div class="social-login" *ngIf="!isLoading">
