--- a/projects/authentication/src/lib/components/login-form/login-form.component.html
+++ b/projects/authentication/src/lib/components/login-form/login-form.component.html
@@ -1,6 +1,6 @@
 <form class="register-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-        <mat-form-field appearance="fill" class="mat-email">
+        <mat-form-field class="mat-email">
             <mat-label>
                 <span class="span-pos">
                     <i
@@ -32,7 +32,7 @@
         </mat-form-field>
     </div>
     <div class="form-group">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
             <mat-label>
                 <i
                     class="zmdi zmdi-lock"
@@ -61,8 +61,6 @@
             </mat-error>
         </mat-form-field>
     </div>
-
-    <lib-error-auth></lib-error-auth>
 
     <div class="form-group">
         <mat-checkbox
