--- a/projects/authentication/src/lib/components/register-form/register-form.component.html
+++ b/projects/authentication/src/lib/components/register-form/register-form.component.html
@@ -1,6 +1,6 @@
 <form class="register-form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
             <mat-label>
                 <span class="span-pos">
                     <i
@@ -22,7 +22,7 @@
         </mat-form-field>
     </div>
     <div class="form-group">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
             <mat-label>
                 <span class="span-pos"
                     ><i
@@ -52,7 +52,7 @@
         </mat-form-field>
     </div>
     <div class="form-group">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
             <mat-label
                 ><span class="span-pos">
                     <i
@@ -84,7 +84,7 @@
         </mat-form-field>
     </div>
     <div class="form-group">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
             <mat-label>
                 <span class="span-pos">
                     <i
@@ -119,7 +119,7 @@
         </mat-form-field>
     </div>
     <div class="form-group">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
             <mat-label
                 ><span class="span-pos">
                     <i
@@ -149,7 +149,6 @@
         >
     </div>
 
-    <lib-error-auth></lib-error-auth>
     <div class="form-group form-button">
         <button mat-raised-button color="primary" [disabled]="!registerForm.valid">
             {{ 'AUTH.REGISTER.REGISTER' | translate }}
