--- a/src/assets/styles/auth/authentication.style.scss
+++ b/src/assets/styles/auth/authentication.style.scss
@@ -596,7 +596,7 @@ label.valid:after {
 }
 .mat-form-field.mat-form-field {
     width: 100%;
-    font-size: 115%;
+    font-size: 130%;
 }
 
 .mat-raised-button.mat-primary:disabled {
@@ -621,8 +621,9 @@ input {
     box-sizing: border-box;
 }
 .mat-icon {
-    font-size: 125%;
+    font-size: 115%;
     margin-top: -30px;
+    margin-right: 10px;
 }
 .mat-icon:hover {
     cursor: pointer;
