refactor: refactoring code

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,8 @@ body {
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+@import 'assets/base';
 @import '~angular-notifier/styles';
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
