--- a/src/assets/styles/auth/authentication.style.scss
+++ b/src/assets/styles/auth/authentication.style.scss
@@ -251,6 +251,7 @@ figure {
 
 .register-form {
     width: 100%;
+    margin-left: 30px;
 }
 
 .form-group {
@@ -600,7 +601,7 @@ label.valid:after {
 }
 
 .mat-raised-button.mat-primary:disabled {
-    background-color: #6dabe4;
+    background-color: #b7c6d4;
     color: #fff;
 }
 .mat-raised-button.mat-primary {
