refactor: refactoring code

--- a/projects/dashboard/src/lib/Components/sidebar/sidebar.component.html
+++ b/projects/dashboard/src/lib/Components/sidebar/sidebar.component.html
@@ -54,7 +54,7 @@
                                             <div class="vsm-item">
                                                 <a
                                                     routerLinkActive="active-item"
-                                                    routerLink="/elements/dropdowns"
+                                                    routerLink="/admin/products/inventory"
                                                     class="vsm-link"
                                                 >
                                                     <span class="vsm-title">Inventory</span></a
