--- a/projects/dashboard/src/lib/Components/get-products/get-products.component.html
+++ b/projects/dashboard/src/lib/Components/get-products/get-products.component.html
@@ -22,27 +22,27 @@
     </ng-container>
 
     <!-- Position Column -->
-    <ng-container matColumnDef="position">
+    <ng-container matColumnDef="Product">
         <th mat-header-cell *matHeaderCellDef>Product</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Category</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
+    <!-- Name Column -->
+    <ng-container matColumnDef="Category">
+        <th mat-header-cell *matHeaderCellDef>Category</th>
+        <td mat-cell *matCellDef="let element">{{ element.categoryId }}</td>
+    </ng-container>
+
     <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef>Sold out</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+    <ng-container matColumnDef="UserHandle">
+        <th mat-header-cell *matHeaderCellDef>added by</th>
+        <td mat-cell *matCellDef="let element">{{ element.userHandle }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
+    <ng-container matColumnDef="Available">
         <th mat-header-cell *matHeaderCellDef>Available</th>
-        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.Available }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -52,3 +52,4 @@
         (click)="selection.toggle(row)"
     ></tr>
 </table>
+<button (click)="selected()">clickk</button>
