refactor: refactoring code

--- a/projects/dashboard/src/lib/Components/get-products/get-products.component.scss
+++ b/projects/dashboard/src/lib/Components/get-products/get-products.component.scss
@@ -1,13 +1,156 @@
+// table {
+//     width: 100%;
+// }
+
+// .mat-form-field {
+//     font-size: 14px;
+//     width: 100%;
+// }
+// td:nth-child(1) {
+//     width: 5%;
+//     margin-left: 30px;
+//     padding-left: 30px;
+// }
+// // td,
+// // th {
+// //     width: 25%;
+// // }
+.product-img {
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+}
 table {
     width: 100%;
 }
+.form-control {
+    width: 30px;
+}
+.btn-max-size {
+    font-size: 100%;
+    color: #6c757d;
+    border-color: #6c757d;
+    font-weight: 400;
 
-.mat-form-field {
-    font-size: 14px;
-    width: 100%;
+    padding: 0.105rem 0.55rem;
+}
+.btn-max-size:hover {
+    color: #fff;
+    border-color: #6c757d;
+}
+.input-group-product {
+    width: 80%;
 }
 
-td,
-th {
-    width: 25%;
+.mat-column-select {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 8% !important;
+    width: 8% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.mat-column-Product {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 20% !important;
+    width: 20% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.mat-column-Category {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 13% !important;
+    width: 13% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+.text-center-product {
+    text-align: center;
+}
+.mat-column-UserHandle {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 13% !important;
+    width: 13% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.mat-column-Available {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 10% !important;
+    width: 10% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+.mat-column-Incoming {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 10% !important;
+    width: 10% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.mat-column-Edit {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 35% !important;
+    width: 35% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-word;
+
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
