--- a/projects/dashboard/src/lib/Components/get-products/get-products.component.html
+++ b/projects/dashboard/src/lib/Components/get-products/get-products.component.html
@@ -1,55 +1,102 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox
-                (change)="$event ? masterToggle() : null"
-                [checked]="selection.hasValue() && isAllSelected()"
-                [indeterminate]="selection.hasValue() && !isAllSelected()"
-                [aria-label]="checkboxLabel()"
-            >
-            </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-            <mat-checkbox
-                (click)="$event.stopPropagation()"
-                (change)="$event ? selection.toggle(row) : null"
-                [checked]="selection.isSelected(row)"
-                [aria-label]="checkboxLabel(row)"
-            >
-            </mat-checkbox>
-        </td>
-    </ng-container>
+<div class="card-body">
+    <h4 class="card-title">Product</h4>
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="Product">
-        <th mat-header-cell *matHeaderCellDef>Product</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
+    <div class="d-block text-right">
+        <button
+            class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"
+            (click)="removeSelectedRows()"
+        >
+            <i class="pe-7s-trash btn-icon-wrapper"> </i>
+        </button>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox
+                    (change)="$event ? masterToggle() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()"
+                    [aria-label]="checkboxLabel()"
+                >
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox
+                    (click)="$event.stopPropagation()"
+                    (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)"
+                    [aria-label]="checkboxLabel(row)"
+                >
+                </mat-checkbox>
+            </td>
+        </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="Category">
-        <th mat-header-cell *matHeaderCellDef>Category</th>
-        <td mat-cell *matCellDef="let element">{{ element.categoryId }}</td>
-    </ng-container>
+        <!-- Product Column -->
+        <ng-container matColumnDef="Product">
+            <th mat-header-cell *matHeaderCellDef>Product</th>
+            <td mat-cell *matCellDef="let element">
+                <img src="{{ element.imageUrl }}" alt="Product" class="product-img" />
+                <a href="#">{{ element.name }}</a>
+            </td>
+        </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="UserHandle">
-        <th mat-header-cell *matHeaderCellDef>added by</th>
-        <td mat-cell *matCellDef="let element">{{ element.userHandle }}</td>
-    </ng-container>
+        <!-- Category Column -->
+        <ng-container matColumnDef="Category">
+            <th mat-header-cell *matHeaderCellDef>Category</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.categoryId }}
+            </td>
+        </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="Available">
-        <th mat-header-cell *matHeaderCellDef>Available</th>
-        <td mat-cell *matCellDef="let element">{{ element.Available }}</td>
-    </ng-container>
+        <!-- UserHandle Column -->
+        <ng-container matColumnDef="UserHandle">
+            <th mat-header-cell *matHeaderCellDef>added by</th>
+            <td mat-cell *matCellDef="let element">{{ element.userHandle }}</td>
+        </ng-container>
+        <!-- Available Column -->
+        <ng-container matColumnDef="Incoming">
+            <th mat-header-cell *matHeaderCellDef>Incoming</th>
+            <td mat-cell *matCellDef="let element">
+                <!-- {{ element.Incoming }} -->
+                <span class="text-center-product">253$</span>
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-        (click)="selection.toggle(row)"
-    ></tr>
-</table>
-<button (click)="selected()">clickk</button>
+        <!-- Available Column -->
+        <ng-container matColumnDef="Available">
+            <th mat-header-cell *matHeaderCellDef>Available</th>
+            <td mat-cell *matCellDef="let element">
+                <!-- {{ element.quantityInStock }} -->
+                <span class="text-center-product">26</span>
+            </td>
+        </ng-container>
+
+        <!-- Available Column -->
+        <ng-container matColumnDef="Edit">
+            <th mat-header-cell *matHeaderCellDef>Edit quantity available</th>
+            <td mat-cell *matCellDef="let element">
+                <div class="input-group input-group-product">
+                    <div class="input-group-prepend">
+                        <button class="btn btn-outline-secondary btn-max-size" type="button">
+                            Save
+                        </button>
+                    </div>
+                    <input
+                        class="form-control"
+                        type="number"
+                        value="42"
+                        id="example-number-input"
+                    />
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+            mat-row
+            *matRowDef="let row; columns: displayedColumns"
+            (click)="selection.toggle(row)"
+        ></tr>
+    </table>
+</div>
