--- a/projects/dashboard/src/lib/Components/get-products/get-products.component.scss
+++ b/projects/dashboard/src/lib/Components/get-products/get-products.component.scss
@@ -38,6 +38,9 @@ table {
     color: #fff;
     border-color: #6c757d;
 }
+.row-hover-product:hover {
+    cursor: pointer;
+}
 .input-group-product {
     width: 80%;
 }
