--- a/projects/dashboard/src/lib/Containers/products/products.component.html
+++ b/projects/dashboard/src/lib/Containers/products/products.component.html
@@ -80,12 +80,30 @@
                                 matInput
                                 type="number"
                                 class="example-right-align"
-                                formControlName="Price"
+                                formControlName="unitPrice"
                                 #Price
                             />
                             <span matPrefix>$&nbsp;</span>
                             <span matSuffix>.00</span>
-                            <mat-error *ngIf="productForm.get('Price').hasError('required')">
+                            <mat-error *ngIf="productForm.get('unitPrice').hasError('required')">
+                                Price is
+                                <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
+                            </mat-error>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" class="full-width-field">
+                            <mat-label>quantityInStock</mat-label>
+                            <input
+                                matInput
+                                type="number"
+                                class="example-right-align"
+                                formControlName="quantityInStock"
+                                #quantityInStock
+                            />
+                            <span matPrefix>$&nbsp;</span>
+                            <span matSuffix>.00</span>
+                            <mat-error
+                                *ngIf="productForm.get('quantityInStock').hasError('required')"
+                            >
                                 Price is
                                 <strong>{{ 'AUTH.LOGIN.REQUIRED' | translate }}</strong>
                             </mat-error>
