--- a/projects/dashboard/src/lib/Containers/products/products.component.scss
+++ b/projects/dashboard/src/lib/Containers/products/products.component.scss
@@ -2,3 +2,9 @@
     width: 100%;
     font-size: 100%;
 }
+.half-width-field {
+    width: 47%;
+}
+.margin-left-product {
+    margin-left: 2rem;
+}
